[gd_scene load_steps=23 format=3 uid="uid://bak4jrkudaefp"]

[ext_resource type="Texture2D" uid="uid://c5jpxknc4ukfl" path="res://assets/sprites/Atroz-2.png" id="1_5acqi"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_tm0an"]
[ext_resource type="Script" path="res://scripts/state_machine/state_machine.gd" id="2_4in31"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/idle.gd" id="3_pefff"]
[ext_resource type="Script" path="res://scripts/components/enemy_move_component.gd" id="5_8ekvo"]
[ext_resource type="Script" path="res://scripts/state_machine/enemy_states/aware.gd" id="5_8y5jq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tislb"]
atlas = ExtResource("1_5acqi")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_61xmb"]
atlas = ExtResource("1_5acqi")
region = Rect2(192, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_71hh4"]
atlas = ExtResource("1_5acqi")
region = Rect2(128, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rmnd"]
atlas = ExtResource("1_5acqi")
region = Rect2(0, 0, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bqa3"]
atlas = ExtResource("1_5acqi")
region = Rect2(64, 0, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_mlwl2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tislb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61xmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71hh4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tislb")
}],
"loop": true,
"name": &"aware",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rmnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rmnd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bqa3")
}],
"loop": true,
"name": &"idle",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6tr7n"]
atlas = ExtResource("1_5acqi")
region = Rect2(64, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6wlw"]
atlas = ExtResource("1_5acqi")
region = Rect2(192, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4hid"]
atlas = ExtResource("1_5acqi")
region = Rect2(64, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3y0ws"]
atlas = ExtResource("1_5acqi")
region = Rect2(128, 144, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mf5u"]
atlas = ExtResource("1_5acqi")
region = Rect2(64, 96, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n37q"]
atlas = ExtResource("1_5acqi")
region = Rect2(64, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldmy5"]
atlas = ExtResource("1_5acqi")
region = Rect2(128, 192, 64, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpfan"]
atlas = ExtResource("1_5acqi")
region = Rect2(192, 96, 64, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_t1nb4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tr7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6wlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4hid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3y0ws")
}],
"loop": false,
"name": &"attack-1",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mf5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n37q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldmy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpfan")
}],
"loop": false,
"name": &"attack-2",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ofn5h"]
size = Vector2(46, 30)

[node name="Bear" type="CharacterBody2D" groups=["Hit"]]
collision_mask = 3
script = ExtResource("1_tm0an")
friendly = false
can_move = false

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-14, -13)
target_position = Vector2(-56, 0)
collision_mask = 2

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(32, -13)
target_position = Vector2(56, 0)
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visibility_layer = 3
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_mlwl2")
animation = &"aware"
autoplay = "idle"

[node name="AttackAnimations" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -24)
sprite_frames = SubResource("SpriteFrames_t1nb4")
animation = &"attack-1"
frame = 3
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, -15)
shape = SubResource("RectangleShape2D_ofn5h")

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("2_4in31")
starting_state = NodePath("EnemyIdleState")

[node name="EnemyIdleState" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("aware_state")]
script = ExtResource("3_pefff")
aware_state = NodePath("../EnemyAwareState")
animation_name = "idle"

[node name="EnemyAwareState" type="Node" parent="MovementStateMachine" node_paths=PackedStringArray("idle_state")]
script = ExtResource("5_8y5jq")
idle_state = NodePath("../EnemyIdleState")
animation_name = "aware"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("enemy", "raycast_right", "raycast_left")]
script = ExtResource("5_8ekvo")
enemy = NodePath("..")
raycast_right = NodePath("../RayCastRight")
raycast_left = NodePath("../RayCastLeft")
